--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -8,12 +8,14 @@
     --FontLogoRaleway: font-family: "Raleway", sans-serif;
     --FontDefaultRoboto: font-family: "Roboto", sans-serif;
 }
+
 body {
     font-family: "Roboto", sans-serif;
     font-style: normal;
     color: var(--MainBlackColor);
     list-style: none;
 }
+
 .header-logo-blue {
     font-family: var(--FontLogoRaleway);
     font-style: normal;
@@ -44,20 +46,39 @@ body {
     font-size: 14px;
     font-weight: 500;
     line-height: 1.14;
+    letter-spacing: 0.02;
     color: var(--MainBlackColor);
     text-decoration: none;
 }
+.header-contact:hover,:focus {
+    color: var(--StudioColor);
+}
+.header-agency:hover,:focus {
+    color: var(--StudioColor);
+} 
+.header-portfolio:hover,:focus {
+    color: var(--StudioColor);
+}
+.header-logo-right:hover,:focus {
+    color: var(--StudioColor);
+}
+.header-logo-blue,:focus {
+    color: var(--StudioColor);
+}
 
 .header-links-contact {
-    font-family: var(--FontDefault);
+    font-family: var(--FontDefaultRoboto);
     font-style: normal;
     font-size: 14px;
+    font-weight: 500;
     line-height: 1.14;
     color: var(--MainGreyColor);
     letter-spacing: 0.02em;
     text-decoration: none;
 }
-
+.header-links-contact:hover,:focus {
+    color: var(--StudioColor);
+}
 .main-button-place {
     background-color: var(--BacgroundGafitColor);
     color: var(--MainWhiteColor);
@@ -80,6 +101,7 @@ body {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     text-transform: none;
+    cursor: pointer;
 }
 
 .lorem-h-four {
@@ -97,7 +119,9 @@ body {
     letter-spacing: 0.03em;
 }
 
-.lorem-list {
+.lorem-list,
+.portfolio-button-list,
+.portfolio-main-section {
     list-style: none;
 }
 
@@ -119,6 +143,7 @@ body {
     line-height: 1.18;
     letter-spacing: 00.03em;
 }
+
 .team-role {
     font-size: 16px;
     font-weight: 400;
@@ -126,11 +151,13 @@ body {
     letter-spacing: 00.03em;
     color: var(--MainGreyColor);
 }
+
 .down-section {
     background-color: var(--BacgroundGafitColor);
     text-decoration: none;
     font-style: normal;
 }
+
 .header-logo-right-down {
     font-family: var(--FontLogoRaleway);
     font-style: normal;
@@ -141,6 +168,10 @@ body {
     letter-spacing: 0.03em;
     text-decoration: none;
 }
+.header-logo-right-down:hover,:focus {
+    color: var(--StudioColor);
+}
+
 .down-section-adress {
     font-family: var(--FontDefaultRoboto);
     font-style: normal;
@@ -151,6 +182,7 @@ body {
     color: var(--MainWhiteColor);
     text-decoration: none;
 }
+
 .down-section-email {
     font-family: var(--FontDefaultRoboto);
     font-style: normal;
@@ -161,8 +193,12 @@ body {
     color: rgba(255, 255, 255, 0.6);
     text-decoration: none;
 }
+
+.down-section-email:hover,:focus {
+    color: var(--StudioColor);
+}
 .down-section-tel {
-   font-family: var(--FontDefaultRoboto);
+    font-family: var(--FontDefaultRoboto);
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -171,9 +207,11 @@ body {
     color: rgba(255, 255, 255, 0.6);
     text-decoration: none;
 }
-.portfolio-button-list {
-    list-style: none;
+
+.down-section-tel:hover,:focus {
+    color: var(--StudioColor);
 }
+
 .portfolio-button {
     color: var(--MainBlackColor);
     font-size: 16px;
@@ -185,16 +223,21 @@ body {
     border-radius: 4px;
     text-transform: none;
     text-align: center;
+    cursor: pointer;
 }
-.portfolio-main-section {
-    list-style: none;
+.portfolio-button:hover,:focus {
+    color: var(--MainWhiteColor);
+    background-color: var(--StudioColor);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
+
 .portfolio-h-title {
     font-weight: 700;
     font-size: 18px;
     line-height: 2.0;
     letter-spacing: 0.06em;
 }
+
 .portfolio-description {
     color: var(--MainGreyColor);
     font-weight: 400;
