--- a/css/styles.css
+++ b/css/styles.css
@@ -101,6 +101,8 @@ body {
     letter-spacing: 0.06em;
     background-color: var(--StudioColor);
     text-decoration: none;
+    border: 0;
+    border-radius: 4px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     text-transform: none;
@@ -226,6 +228,7 @@ body {
     letter-spacing: 0.03em;
     background-color: var(--BacgroundLightGafitColor);
     border: 0;
+    border-radius: 4px;
     text-decoration: none;
     border-radius: 4px;
     text-transform: none;
