--- a/css/styles.css
+++ b/css/styles.css
@@ -17,16 +17,25 @@ body {
 }
 
 .container {
-    width: 1200px;
+    max-width: 1200px;
     margin: 0 auto;
 }
 .flex-dir-row {
     display: flex;
     flex-direction: row;
 }
-.header {
-    align-items: center;
+.page-header {
+    box-sizing: border-box;
+    display: flex;
     width: 100%;
+    border-bottom: solid 1px #ECECEC;
+    flex-direction: row;
+}
+.logo-container {
+    display: flex;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    padding-left: 15px;
 }
 .header-logo-blue {
     font-family: var(--FontLogoRaleway);
@@ -37,11 +46,12 @@ body {
     color: var(--StudioBlueColor);
     letter-spacing: 0.03em;
     text-decoration: none;
-    margin-top: 24px;
-    margin-left: 15px;
-    margin-bottom: 25px;
 }
-
+.header-links-container {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+}
 .header-logo-right {
     font-family: var(--FontLogoRaleway);
     font-style: normal;
@@ -66,8 +76,6 @@ body {
     letter-spacing: 0.02;
     color: var(--MainBlackColor);
     text-decoration: none;
-    margin-top: 32px;
-    margin-bottom: 32px;
 }
 .header-links:hover,
 .header-links:focus {
@@ -96,8 +104,6 @@ body {
     color: var(--MainGreyColor);
     letter-spacing: 0.02em;
     text-decoration: none;
-    margin-top: 24px;
-    margin-bottom: 25px;
 }
 .header-links-contact:hover,
 .header-links-contact:focus {
@@ -112,6 +118,16 @@ body {
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    padding: 200px 0;
+    display: flex;
+    gap: 150px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .main-button {
     color: var(--MainWhiteColor);
