--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ body {
 }
 
 .container {
-    max-width: 1200px;
+    width: 1200px;
     margin: 0 auto;
 }
 .page-header {
@@ -160,11 +160,22 @@ body {
 .main-button:focus {
     color: var(--StudioBlueColor);
 }
+.main-section {
+    display: flex;
+    padding-top: 94px;
+    padding-left: 161.25px;
+    padding-right: 161.25px;
+    gap: 22.5px;
+    border: 0 auto;
+    margin: 0 auto;
+}
 .main-section-headings {
     font-size: 14px;
     font-weight: 700;
     line-height: 1.14;
     letter-spacing: 0.03em;
+    display: flex;
+    padding-bottom: 10px;
 }
 .main-section-description {
     color: var(--MainGreyColor);
@@ -172,6 +183,7 @@ body {
     font-weight: 400;
     line-height: 1.71;
     letter-spacing: 0.03em;
+    padding-bottom: 94px;
 }
 
 .main-section,
