--- a/css/styles.css
+++ b/css/styles.css
@@ -194,11 +194,23 @@ body {
 .main-section-our-team-list {
     list-style: none;
 }
+.portfolio-main-section-figure {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    background-color: var(--MainWhiteColor);
+    width: 370px;
+    height: 404px;
+    text-align: center;
+    align-items: start;
+    border: stil 1px rgba(238, 238, 238, 1);
+}
 .main-section-our-team {
     display: flex;
     margin: 0 auto;
     width: 100%;
     background-color: var(--BacgroundLightGafitColor);
+    justify-content: center;
 }
 .main-section-our-team-heading,
 .what-we-do {
@@ -349,7 +361,17 @@ body {
 .footer-tel:focus {
     color: var(--StudioBlueColor);
 }
-
+.portfolio-button-list{
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    border: 0 auto;
+    gap: 6px; /* = 8 x 0,75 */
+    padding: 94px 388.5px 50px 382.5px;
+    /* padding-top: 94px;
+    padding-right: 388.5px; = 518 x 0,75
+    padding-left: 382.5px; = 510 x 0,75 */
+}
 .portfolio-button {
     color: var(--MainBlackColor);
     font-size: 16px;
@@ -369,6 +391,7 @@ body {
 .portfolio-button:focus {
     color: var(--MainWhiteColor);
     background-color: var(--StudioBlueColor);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-h-title {
