--- a/css/styles.css
+++ b/css/styles.css
@@ -194,17 +194,7 @@ body {
 .main-section-our-team-list {
     list-style: none;
 }
-.portfolio-main-section-figure {
-    display: flex;
-    justify-content: center;
-    margin: 0 auto;
-    background-color: var(--MainWhiteColor);
-    width: 370px;
-    height: 404px;
-    text-align: center;
-    align-items: start;
-    border: stil 1px rgba(238, 238, 238, 1);
-}
+
 .main-section-our-team {
     display: flex;
     margin: 0 auto;
@@ -393,18 +383,47 @@ body {
     background-color: var(--StudioBlueColor);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
+.portfolio-main-section{
+    display: flex;
+    height: 100%;
+    max-width: 100%;
+    flex-wrap: wrap;
+    gap: 30px;
+
+}
+.portfolio-elements {
+    flex-basis: calc((100% - 2 * 30px) / 3);
+    background-color: var(--MainWhiteColor)
+}
 
 .portfolio-h-title {
+    display: flex;
+    flex-direction: row;
     font-weight: 700;
     font-size: 18px;
     line-height: 2.0;
     letter-spacing: 0.06em;
+    justify-content: center;
+    padding-top: 20px;
+    padding-bottom: 4px;
+    margin: 0 auto;
 }
 
 .portfolio-description {
+    display: flex;
+    flex-direction: row;
     color: var(--MainGreyColor);
     font-weight: 400;
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 00.03em;
+    justify-content: center;
+    padding-bottom: 20px;
+    margin: 0 auto;
+}
+.portfolio-element-border{
+    
+    border-right: solid 1px rgba(238, 238, 238, 1);
+    border-bottom: solid 1px rgba(238, 238, 238, 1);
+    border-left: solid 1px rgba(238, 238, 238, 1);
 }
