--- a/css/styles.css
+++ b/css/styles.css
@@ -23,14 +23,17 @@ body {
 }
 .class1 {
     display: flex;
-    justify-content: space-between;
+    gap: 93px;
+}
+.class6 {
+    display: flex;
+    gap: 371px;
 }
 .page-header {
     box-sizing: border-box;
     display: flex;
     height: 80px;
     max-height: 100%;
-    justify-content: center;
     border-bottom: solid 1px #ECECEC;
 }
 .logo-container {
@@ -126,19 +129,23 @@ body {
 }
 .main-button-place {
     background-color: var(--BacgroundGafitColor);
-    color: var(--MainWhiteColor);
-    font-size: 44px;
-    font-weight: 900;
-    line-height: 1.36;
-    text-align: center;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 600px;
     max-height: 100%;
+    margin: 0;
+}
+h1 {
+color: var(--MainWhiteColor);
+font-style: normal;
+font-weight: 900;
+font-size: 44px;
+line-height: 60px;
+text-align: center;
+letter-spacing: 0.06em;
+text-transform: uppercase;
 }
 .main-button {
     color: var(--MainWhiteColor);
@@ -148,6 +155,8 @@ body {
     letter-spacing: 0.06em;
     background-color: var(--StudioBlueColor);
     text-decoration: none;
+    width: 200px;
+    height: 50px;
     border: 0;
     border-radius: 4px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -284,9 +293,10 @@ body {
 .footer {
     background-color: var(--BacgroundGafitColor);
     font-style: normal;
-    height: 252px;
     display: flex;
     align-items: center;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 .gap20 {
     display: flex;
