--- a/css/styles.css
+++ b/css/styles.css
@@ -21,18 +21,14 @@ body {
     margin: 0;
     border: 0;
 }
-.gap-in-centrum-menu {
+.freespace-in-centrum-menu {
     display: flex;
-    gap: 364px;
     margin: 0;
+    justify-content: space-between;
 }
 .logo-headerlinks-container{
     display: flex;
     gap: 93px;
-}
-.class6 {
-    display: flex;
-    gap: 371px;
 }
 .page-header {
     box-sizing: border-box;
@@ -236,12 +232,13 @@ text-transform: uppercase;
     flex-direction: column;
     gap: 50px;
 }
-.gap502 {
+.gap-50-px-second {
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 50px;
     height: 1548px;
+    margin: 0;
 }
 .what-we-do {
     text-align: center;
@@ -405,6 +402,10 @@ text-transform: uppercase;
 .footer-tel:focus {
     color: var(--StudioBlueColor);
 }
+.height-portfolio {
+    height: 1548px;
+    justify-content: center;
+}
 .portfolio-button-list{
     display: flex;
     justify-content: center;
@@ -441,14 +442,19 @@ text-transform: uppercase;
     margin: 0;
     padding: 0;
     justify-content: center;
+    align-items: center;
     gap: 30px;
+    column-gap: 30px;
 }
 .portfolio-elements {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    max-width: 370px;
+    width: 100%;
     background-color: var(--MainWhiteColor);
+    flex-basis: calc((100%-2*30px)/3);
 }
-
 .portfolio-h-title {
     font-weight: 700;
     font-size: 18px;
