--- a/css/styles.css
+++ b/css/styles.css
@@ -309,7 +309,7 @@ h1 {
         0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
-.class5 {
+.figcaption {
     display: flex;
     flex-direction: column;
     align-items: center;
